--- a/src/view/Financiamento/financiamento.html
+++ b/src/view/Financiamento/financiamento.html
@@ -98,10 +98,12 @@
             {%endfor%}            
         </table>  
         
-        <a href="/criarFinanciamento" id="novo-financiamento" class="button-top">
+        <a href="/criarFinanciamento" class="button-footer">
             <img src="/imagem/financiamento.png" alt="Novo Financiamento">
-            <p>Novo Financiamento</p>
+            <p>Cadastrar Financiar</p>
         </a>
+
+        
     </div>
 </body>
 </html>
