--- a/src/view/FluxoCaixa/saida.html
+++ b/src/view/FluxoCaixa/saida.html
@@ -136,15 +136,11 @@
                 </table>  
             </fieldset>
         </form>
-        <a href="/" id="button-compra" class="button-footer">
-            <img src="/imagem/fornecedor.png" alt="Comprar">
-            <p>Cadastrar Compras</p>
-        </a>
 
-        <a href="/cadastrarSaida" id="button-compra" class="button-footer">
-            <img src="/imagem/fornecedor.png" alt="Comprar">
-            <p>Cadastrar Saídas</p>
-        </a>
+        <div class="acoes-n-banco">
+            <a  href="/cadastrarSaida" id="cadastrar-banco"> <p>Cadastrar Saídas</p> </a>
+        </div>
+
     </div>
 </body>
 </html>
