--- a/src/view/Fornecedor/fornecedor.html
+++ b/src/view/Fornecedor/fornecedor.html
@@ -90,7 +90,7 @@
 
             <fieldset name="listaFornecedor" class="dados-Top">
                 <div class="title">
-                    <legend>Escolha uma fornecedor</legend>
+                    <legend>Escolha um fornecedor</legend>
                 </div>
                 <div class="write-block">
                     <label for="codFornecedor">Fornecedor:</label>
