--- a/src/view/Fornecedor/infoFornecedor.html
+++ b/src/view/Fornecedor/infoFornecedor.html
@@ -130,7 +130,7 @@
                     {%for insumo in insumos%}
                         <tr>
                             <td>{{insumo.nome_insumo}}</td>
-                            <td>{{insumo.dia_entrega}}</td>
+                            <td>{{insumo.dia_entrega}} DIAS</td>
                             <td>{{insumo.qualidade_produto}}</td>
                          </tr>   
                     {%endfor%}  
@@ -138,7 +138,7 @@
                     {%for ferramenta in ferramentas%}
                         <tr>    
                             <td>{{ferramenta.nome_ferramenta}}</td>
-                            <td>{{ferramenta.dia_entrega}}</td>
+                            <td>{{ferramenta.dia_entrega}} DIAS</td>
                             <td>{{ferramenta.qualidade_produto}}</td>
                         </tr>   
                     {%endfor%} 
