--- a/src/view/Plantacao/criarPlanoProducao.html
+++ b/src/view/Plantacao/criarPlanoProducao.html
@@ -100,7 +100,7 @@
                     <input type="number" id="diasProducao" name="diasProducao" min="1" required>
                 </div>
                 <div class="write-block">
-                    <label for="areaTerreno">Área de Producao (em metros²):</label>
+                    <label for="areaTerreno">Área de Produção (em metros²):</label>
                     <input type="number" id="areaTerreno" name="areaTerreno" min="1" step=".01" placeholder="000.00 m²" required>
                 </div>
 
