--- a/public/style/formStyle.css
+++ b/public/style/formStyle.css
@@ -94,7 +94,7 @@ legend {
     display: flex;
     padding-top: 3rem;
 
-    padding-left: 45rem;
+    padding-left: 20rem;
 
     font-family: Poppins;
     color: var(--color-text);
@@ -104,17 +104,21 @@ legend {
 
 .read-block-botton label{
     font-size: 2rem;
-    padding: 0 2rem; 
+    margin: 0.5rem 0;
+    padding: 0 0.5rem; 
 
-    width:10rem;
+    width:27rem;
 }
 
 .read-block-botton p{
+    display: flex;
+    align-items: center;
+
     border-radius: 0.8rem;
 
     width: 100%;
     height: 3.5rem;
-    padding: 1.5rem;
+    padding: 0.5rem;
     font-size: 2rem;
     background: var(--color-background);
 }
