--- a/public/style/mainStyle.css
+++ b/public/style/mainStyle.css
@@ -344,13 +344,15 @@ a p{
 
 .main a.button-footer {
     background-color: var(--color-third);
+    float: right;
+    margin-right: 6rem;
+    margin-top: 4rem;
+    margin-bottom: 0;
 }
 
 .main a.button-footer,
 .main a.button-top{
     position: relative;
-    margin-top: 4rem;
-    margin-bottom: 3rem;
     border-radius: 0.8rem;
 
     display: grid;
@@ -505,4 +507,46 @@ a#fechar-banco p{
     height: 5rem;
 
     color: #000;
+}
+
+.botao-duvida {
+    display: inline;
+    margin: 0;
+}
+
+.table-Detalhe td.input{
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+
+}
+
+#tabela-venda th {
+    padding: 1rem;
+}
+
+#tabela-venda td {
+    width: 5rem;
+    padding: 1rem;
+}
+
+.table-Detalhe td.input input{
+    width: 5rem;
+    height: 3rem;
+
+    padding-left: 1rem;
+
+    background: var(--color-background);
+    border-radius: 0.5rem;
+    border-style: none;
+
+    font-size: 1.5rem;
+    color: var(--color-text);
+    font-family: Poppins;
+}
+
+p.mensagem {
+    font-family: Poppins;
+    font-size: 2rem;
+    display: block;
+    text-align: center;
 }
