--- a/public/style/pagetable.css
+++ b/public/style/pagetable.css
@@ -55,6 +55,8 @@ a {
     font-size: 2rem;
     font-family: Poppins;
     color: var(--color-text);
+
+    border-width: thin;
 }
 
 .table-Detalhe .head th{
@@ -66,6 +68,8 @@ a {
     font-family: Poppins;
     text-align: center;
     color: var(--color-text);
+
+    border-width: thin;
 }
 
 #tabela-financiamento {
