--- a/src/view/Cliente/cliente.html
+++ b/src/view/Cliente/cliente.html
@@ -13,6 +13,7 @@
 
     <title>Veg</title>
 </head>
+
 <body>
     <div class="menu">
         <h1>Escolha uma opção</h1>
@@ -76,73 +77,38 @@
         </div>   
         
     </div>
-        
+    
     <div class="main">
-        <h1>Entrada de Caixa</h1>
-        <form action="/entrada" method="POST">
-            <fieldset class="dados-Top">
-                <div class="title">
-                    <legend>Personalizar Busca</legend>
-                </div>
-                <div class="write-block">
-                    <label for="inicioBusca">Inicio da Busca</label>
-                    <input type="date" id="inicioBusca" name="inicioBusca">
-                </div>
-                <div class="write-block">
-                    <label for="fimBusca">Fim da Busca</label>
-                    <input type="date" id="fimBusca" name="fimBusca">
-                </div>    
-                <button type="submit">
-                   Buscar
-                </button>       
-            </fieldset>
-        </form>
+        <h1>
+            Cliente
+            <a href="/venda">
+                <img src="/imagem/voltar.png" alt="">
+                Voltar
+            </a>
+        </h1>
 
-        <form action="/acessarEntrada" method="POST">
-            <fieldset class="dados-Top">
+        <form action="/cliente" method="POST">
+
+            <fieldset name="listaFornecedor" class="dados-Top">
                 <div class="title">
-                    <legend>Buscar Entradas</legend>
+                    <legend>Escolha um cliente</legend>
                 </div>
-                <div class="search-block">
-                    <div class="select">
-                        <label for="codEntrada">Entradas:</label>
-                        <select name="codEntrada" id="codEntrada" required>
-                            <option value="" disable="" hidden="">Selecione uma opção</option> 
-                            {%for entrada in entradas%}
-                                <option value={{entrada.cod_entrada}}>{{entrada.nome_entrada}} - {{entrada.validade_entrada}}</option>
-                            {%endfor%}
-                        </select>
-                    </div>
-                    <button type="submit" class="salvar">
-                        Acessar
-                    </button>
+                <div class="write-block">
+                    <label for="codCliente">Cliente:</label>
+                    <select name="codCliente" id="codCliente" required>
+                        <option value="" disable="" hidden="">Selecione uma opção</option>
+                        {%for cliente in listaCliente%}
+                            <option value={{cliente.cod_cliente}}>{{cliente.nome_cliente}}</option> 
+                        {%endfor%}
+                    </select>
                 </div>
-            </fieldset>
-            <fieldset class="dados-Button">
-                <table id="tabela-entrada">
-                    <tr>
-                        <td class="indent">Nome</td>
-                        <td class="indent">Valor</td>
-                        <td class="indent">Data</td>
-                    </tr>
-                    
-                    {%for entrada in entradas%}
-                        <tr>
-                            <td class="valor">{{entrada.nome_entrada}}</td>
-                            <td class="valor">R$ {{entrada.valor_entrada}}</td>
-                            <td class="valor">{{entrada.validade_entrada}}</td>
-                        </tr>
-                    {%endfor%}
-                    
+                <button type="submit" class="btn_calcular" name="btn_calcular">Selecionar</button>
+            </fieldset>         
+        </form>    
         
-                </table>  
-            </fieldset>
-        </form>
-
         <div class="acoes-n-banco">
-            <a  href="/cadastrarEntrada" id="cadastrar-banco"> <p>Cadastrar Entradas</p> </a>
+            <a href="/criarCliente" id="cadastrar-banco"> <p>Criar Cliente</p> </a>
         </div>
-
     </div>
 </body>
 </html>
