--- a/src/view/Cliente/criarCliente.html
+++ b/src/view/Cliente/criarCliente.html
@@ -14,6 +14,7 @@
     <title>Veg</title>
 </head>
 <body>
+
     <div class="menu">
         <h1>Escolha uma opção</h1>
         <div class="botoes">               
@@ -76,73 +77,46 @@
         </div>   
         
     </div>
-        
+    
     <div class="main">
-        <h1>Entrada de Caixa</h1>
-        <form action="/entrada" method="POST">
-            <fieldset class="dados-Top">
-                <div class="title">
-                    <legend>Personalizar Busca</legend>
-                </div>
-                <div class="write-block">
-                    <label for="inicioBusca">Inicio da Busca</label>
-                    <input type="date" id="inicioBusca" name="inicioBusca">
-                </div>
-                <div class="write-block">
-                    <label for="fimBusca">Fim da Busca</label>
-                    <input type="date" id="fimBusca" name="fimBusca">
-                </div>    
-                <button type="submit">
-                   Buscar
-                </button>       
-            </fieldset>
-        </form>
-
-        <form action="/acessarEntrada" method="POST">
-            <fieldset class="dados-Top">
-                <div class="title">
-                    <legend>Buscar Entradas</legend>
-                </div>
-                <div class="search-block">
-                    <div class="select">
-                        <label for="codEntrada">Entradas:</label>
-                        <select name="codEntrada" id="codEntrada" required>
-                            <option value="" disable="" hidden="">Selecione uma opção</option> 
-                            {%for entrada in entradas%}
-                                <option value={{entrada.cod_entrada}}>{{entrada.nome_entrada}} - {{entrada.validade_entrada}}</option>
-                            {%endfor%}
-                        </select>
-                    </div>
-                    <button type="submit" class="salvar">
-                        Acessar
-                    </button>
-                </div>
-            </fieldset>
-            <fieldset class="dados-Button">
-                <table id="tabela-entrada">
-                    <tr>
-                        <td class="indent">Nome</td>
-                        <td class="indent">Valor</td>
-                        <td class="indent">Data</td>
-                    </tr>
-                    
-                    {%for entrada in entradas%}
-                        <tr>
-                            <td class="valor">{{entrada.nome_entrada}}</td>
-                            <td class="valor">R$ {{entrada.valor_entrada}}</td>
-                            <td class="valor">{{entrada.validade_entrada}}</td>
-                        </tr>
-                    {%endfor%}
-                    
+        <h1>
+            Cadastrar Cliente
+            <a href="/cliente">
+                <img src="/imagem/voltar.png" alt="">
+                Voltar
+            </a>
+        </h1>
         
-                </table>  
+        <form action="/salvarCliente" method="POST">
+            <fieldset class="dados-Top">
+                <div class="title">
+                    <legend>Dados do Cliente</legend>
+                </div>
+                <div class="write-block">
+                    <label for="nomeCliente">Nome do Cliente:</label>
+                    <input type="text" id="nomeCliente" name="nomeCliente">
+                </div>
+                <div class="write-block">
+                    <label for="docCliente">Documento do Cliete (CNPJ ou CPF) :</label>
+                    <input type="text" id="docCliente" name="docCliente">
+                </div>
+                <div class="write-block">
+                    <label for="telefoneCliente">Telefone do Cliente:</label>
+                    <input type="text" id="telefoneCliente" name="telefoneCliente">
+                </div>
+                <div class="write-block">
+                    <label for="cepCliente">CEP do Cliente:</label>
+                    <input type="text" id="cepCliente" name="cepCliente">
+                </div>
+                <div class="write-block">
+                    <label for="emailCliente">E-mail do Cliente:</label>
+                    <input type="text" id="emailCliente" name="emailCliente">
+                </div>
             </fieldset>
-        </form>
 
-        <div class="acoes-n-banco">
-            <a  href="/cadastrarEntrada" id="cadastrar-banco"> <p>Cadastrar Entradas</p> </a>
-        </div>
+            <button type="submit" class="btn_calcular" name="btn_calcular">Salvar</button>
 
+        </form> 
     </div>
 </body>
 </html>
