--- a/src/view/Cliente/infoCliente.html
+++ b/src/view/Cliente/infoCliente.html
@@ -76,73 +76,51 @@
         </div>   
         
     </div>
-        
+    
     <div class="main">
-        <h1>Entrada de Caixa</h1>
-        <form action="/entrada" method="POST">
-            <fieldset class="dados-Top">
-                <div class="title">
-                    <legend>Personalizar Busca</legend>
-                </div>
-                <div class="write-block">
-                    <label for="inicioBusca">Inicio da Busca</label>
-                    <input type="date" id="inicioBusca" name="inicioBusca">
-                </div>
-                <div class="write-block">
-                    <label for="fimBusca">Fim da Busca</label>
-                    <input type="date" id="fimBusca" name="fimBusca">
-                </div>    
-                <button type="submit">
-                   Buscar
-                </button>       
-            </fieldset>
-        </form>
-
-        <form action="/acessarEntrada" method="POST">
-            <fieldset class="dados-Top">
-                <div class="title">
-                    <legend>Buscar Entradas</legend>
-                </div>
-                <div class="search-block">
-                    <div class="select">
-                        <label for="codEntrada">Entradas:</label>
-                        <select name="codEntrada" id="codEntrada" required>
-                            <option value="" disable="" hidden="">Selecione uma opção</option> 
-                            {%for entrada in entradas%}
-                                <option value={{entrada.cod_entrada}}>{{entrada.nome_entrada}} - {{entrada.validade_entrada}}</option>
-                            {%endfor%}
-                        </select>
-                    </div>
-                    <button type="submit" class="salvar">
-                        Acessar
-                    </button>
-                </div>
-            </fieldset>
-            <fieldset class="dados-Button">
-                <table id="tabela-entrada">
-                    <tr>
-                        <td class="indent">Nome</td>
-                        <td class="indent">Valor</td>
-                        <td class="indent">Data</td>
-                    </tr>
-                    
-                    {%for entrada in entradas%}
-                        <tr>
-                            <td class="valor">{{entrada.nome_entrada}}</td>
-                            <td class="valor">R$ {{entrada.valor_entrada}}</td>
-                            <td class="valor">{{entrada.validade_entrada}}</td>
-                        </tr>
-                    {%endfor%}
-                    
+        <h1>
+            Cliente
+            <a href="/cliente">
+                <img src="/imagem/voltar.png" alt="">
+                Voltar
+            </a>
+        </h1>
         
-                </table>  
+        <form>
+            <fieldset class="dados-Top">
+                <div class="title">
+                    <legend>{{cliente.nome_cliente}}</legend>
+                </div>
+                             
+                <div class="read-block">
+                    <label for="nomeCliente">Nome do Cliente:</label>
+                    <p class="input">{{cliente.nome_cliente}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="docCliente">CNPJ do Cliente:</label>
+                    <p class="input">{{cliente.doc_cliente}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="telefoneCliente">Telefone do Cliente:</label>
+                    <p class="input">{{cliente.telefone_cliente}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="cepCliente">CEP do Cliente:</label>
+                    <p class="input">{{cliente.cep_cliente}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="emailCliente">E-mail do Cliente:</label>
+                    <p class="input">{{cliente.email_cliente}}</p>
+                </div> 
+                
             </fieldset>
+
         </form>
-
-        <div class="acoes-n-banco">
-            <a  href="/cadastrarEntrada" id="cadastrar-banco"> <p>Cadastrar Entradas</p> </a>
-        </div>
-
+            
+        <!-- <div class="botoes-fim-cadastro">
+            <a href="/inabilitarFornecedor" id="cancelar-cadastro"> <p>Inabilitar</p> </a>
+           <a href="/editarFornecedor" id="cadastrar-cadastro"> <p>Editar</p> </a>
+        </div>   -->
     </div>
 </body>
 </html>
