--- a/src/view/Compra/caracterizarProduto.html
+++ b/src/view/Compra/caracterizarProduto.html
@@ -76,73 +76,51 @@
         </div>   
         
     </div>
-        
+    
     <div class="main">
-        <h1>Entrada de Caixa</h1>
-        <form action="/entrada" method="POST">
-            <fieldset class="dados-Top">
-                <div class="title">
-                    <legend>Personalizar Busca</legend>
-                </div>
-                <div class="write-block">
-                    <label for="inicioBusca">Inicio da Busca</label>
-                    <input type="date" id="inicioBusca" name="inicioBusca">
-                </div>
-                <div class="write-block">
-                    <label for="fimBusca">Fim da Busca</label>
-                    <input type="date" id="fimBusca" name="fimBusca">
-                </div>    
-                <button type="submit">
-                   Buscar
-                </button>       
-            </fieldset>
-        </form>
+        <h1>
+            Compra
+            <a href="/apresentarFornecedor">
+                <img src="/imagem/voltar.png" alt="">
+                Voltar
+            </a>
+        </h1>
 
-        <form action="/acessarEntrada" method="POST">
+        <form action="/apresentarCompra" method="POST">
             <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Buscar Entradas</legend>
+                    <legend>Produtos da Compra:</legend>
                 </div>
-                <div class="search-block">
-                    <div class="select">
-                        <label for="codEntrada">Entradas:</label>
-                        <select name="codEntrada" id="codEntrada" required>
-                            <option value="" disable="" hidden="">Selecione uma opção</option> 
-                            {%for entrada in entradas%}
-                                <option value={{entrada.cod_entrada}}>{{entrada.nome_entrada}} - {{entrada.validade_entrada}}</option>
-                            {%endfor%}
-                        </select>
-                    </div>
-                    <button type="submit" class="salvar">
-                        Acessar
-                    </button>
-                </div>
-            </fieldset>
-            <fieldset class="dados-Button">
-                <table id="tabela-entrada">
-                    <tr>
-                        <td class="indent">Nome</td>
-                        <td class="indent">Valor</td>
-                        <td class="indent">Data</td>
-                    </tr>
-                    
-                    {%for entrada in entradas%}
-                        <tr>
-                            <td class="valor">{{entrada.nome_entrada}}</td>
-                            <td class="valor">R$ {{entrada.valor_entrada}}</td>
-                            <td class="valor">{{entrada.validade_entrada}}</td>
+
+                <div class="radio-block" style="padding-right: 0;">
+                    <table class="table-Detalhe" id="tabela-venda">
+                        <tr class="head">
+                            <th></th>
+                            <th>Produto</th>
+                            <th>Fornecedor</th>
+                            <th>Data de Entrega</th>
+                            <th>Quantidade</th>
+                            <th>Preço</th>
                         </tr>
-                    {%endfor%}
+                        {%for item in listaCompra%}
+                            <tr>
+                                <td > <a href={{item.rota_excluir}}><img src="/imagem/lixo.png" alt="apagar"></a> </td>
+                                <td >{{item.nome_produto}}</td> 
+                                <td >{{item.nome_fornecedor}}</td>    
+                                <td >{{item.data_entrega}}</td>                                 
+                                <td class="input"> <input class="quantProduto" type="number" name="quantProduto"  step=".01"min=".1" placeholder="0.00" required> {{item.contagem01}}</td>
+                                <td class="input"> R$<input  class="valorProduto" type="number" name="valorProduto"  step=".01"min=".1" placeholder="0.00" required> {{item.contagem02}}</td>
+                            </tr>
+                        {%endfor%}
+                    </table>
                     
-        
-                </table>  
+                </div>
+
+                <button type="submit" class="btn_calcular" name="btn_calcular">Continuar</button>
             </fieldset>
         </form>
 
-        <div class="acoes-n-banco">
-            <a  href="/cadastrarEntrada" id="cadastrar-banco"> <p>Cadastrar Entradas</p> </a>
-        </div>
-
+        
     </div>
 </body>
 </html>
