--- a/src/view/Compra/escolherItem.html
+++ b/src/view/Compra/escolherItem.html
@@ -76,73 +76,60 @@
         </div>   
         
     </div>
-        
+    
     <div class="main">
-        <h1>Entrada de Caixa</h1>
-        <form action="/entrada" method="POST">
+        <h1>
+            Compra            
+        </h1>
+
+        <form action="/apresentarFornecedores" method="POST">
             <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Personalizar Busca</legend>
+                    <legend>Adicionar produtos</legend>
                 </div>
-                <div class="write-block">
-                    <label for="inicioBusca">Inicio da Busca</label>
-                    <input type="date" id="inicioBusca" name="inicioBusca">
+
+                <div class="radio-block">
+                    <label for="entreaga">Selecione as Insumos: </label>
+
+                    {%for insumo in insumos%}
+                        <p>
+                            <label onclick="imediato()">
+                                <input type="checkbox" name="insumo" value={{insumo.id_produto}}> {{insumo.nome_insumo}}
+                            </label>
+                        </p>
+                    {%endfor%}  
+                    <p style="visibility: hidden;">
+                        <label onclick="imediato()">
+                            <input type="checkbox" name="insumo" value=0 checked> {{insumo.nome_insumo}}
+                        </label>
+                    </p>
+                    
                 </div>
-                <div class="write-block">
-                    <label for="fimBusca">Fim da Busca</label>
-                    <input type="date" id="fimBusca" name="fimBusca">
-                </div>    
-                <button type="submit">
-                   Buscar
-                </button>       
+
+                <div class="radio-block">
+                    <label for="entreaga">Selecione as Ferramanta: </label>
+
+                    {%for ferramenta in ferramentas%}
+                        <p>
+                            <label onclick="imediato()">
+                                <input type="checkbox" name="ferramenta" value={{ferramenta.id_produto}}> {{ferramenta.nome_ferramenta}}
+                            </label>
+                        </p>
+                    {%endfor%}  
+                    <p style="visibility: hidden;">
+                        <label onclick="imediato()">
+                            <input type="checkbox" name="ferramenta" value=0 checked> 
+                        </label>
+                    </p>
+                    
+                </div>
+
+                <p style="font-size: 2rem; font-family: Poppins; color: red;">{{mensagem}}</p>
+
+                <button type="submit" class="btn_calcular" name="btn_calcular">Continuar</button>
             </fieldset>
         </form>
-
-        <form action="/acessarEntrada" method="POST">
-            <fieldset class="dados-Top">
-                <div class="title">
-                    <legend>Buscar Entradas</legend>
-                </div>
-                <div class="search-block">
-                    <div class="select">
-                        <label for="codEntrada">Entradas:</label>
-                        <select name="codEntrada" id="codEntrada" required>
-                            <option value="" disable="" hidden="">Selecione uma opção</option> 
-                            {%for entrada in entradas%}
-                                <option value={{entrada.cod_entrada}}>{{entrada.nome_entrada}} - {{entrada.validade_entrada}}</option>
-                            {%endfor%}
-                        </select>
-                    </div>
-                    <button type="submit" class="salvar">
-                        Acessar
-                    </button>
-                </div>
-            </fieldset>
-            <fieldset class="dados-Button">
-                <table id="tabela-entrada">
-                    <tr>
-                        <td class="indent">Nome</td>
-                        <td class="indent">Valor</td>
-                        <td class="indent">Data</td>
-                    </tr>
-                    
-                    {%for entrada in entradas%}
-                        <tr>
-                            <td class="valor">{{entrada.nome_entrada}}</td>
-                            <td class="valor">R$ {{entrada.valor_entrada}}</td>
-                            <td class="valor">{{entrada.validade_entrada}}</td>
-                        </tr>
-                    {%endfor%}
-                    
         
-                </table>  
-            </fieldset>
-        </form>
-
-        <div class="acoes-n-banco">
-            <a  href="/cadastrarEntrada" id="cadastrar-banco"> <p>Cadastrar Entradas</p> </a>
-        </div>
-
     </div>
 </body>
 </html>
