--- a/src/view/Compra/resultadoCompra.html
+++ b/src/view/Compra/resultadoCompra.html
@@ -76,73 +76,81 @@
         </div>   
         
     </div>
-        
+    
     <div class="main">
-        <h1>Entrada de Caixa</h1>
-        <form action="/entrada" method="POST">
+        <h1>
+            Resultado da Copra
+        </h1>
+    
+        <form action="" method="POST">
             <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Personalizar Busca</legend>
+                    <legend>Dados do Principais</legend>
                 </div>
-                <div class="write-block">
-                    <label for="inicioBusca">Inicio da Busca</label>
-                    <input type="date" id="inicioBusca" name="inicioBusca">
+                <div class="read-block">
+                    <label for="nomeCliente">Nome do Cliente:</label>
+                    <p class="input">{{dadosVenda.nome_cliente}}</p>
                 </div>
-                <div class="write-block">
-                    <label for="fimBusca">Fim da Busca</label>
-                    <input type="date" id="fimBusca" name="fimBusca">
-                </div>    
-                <button type="submit">
-                   Buscar
-                </button>       
+                <div class="read-block">
+                    <label for="diaEntrega">Data da Entrega:</label>
+                    <p class="input">{{dadosVenda.data_escrita}} - {{dadosVenda.tipo_venda}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="areaProducao">Área de Produção:</label>
+                    <p class="input">{{dadosVenda.area_producao}} m²</p>
+                </div>
+                <div class="read-block">
+                    <label for="diaProducao">Dias Totais de Produção:</label>
+                    <p class="input">{{dadosVenda.dias_producao}}</p>
+                </div>
+                <div class="read-block">
+                    <label for="tipoTransporte">Tipo da Entrega:</label>
+                    <p class="input">{{dadosVenda.tipo_entrega}}</p>
+                </div>
+                
             </fieldset>
+
+            
         </form>
 
-        <form action="/acessarEntrada" method="POST">
-            <fieldset class="dados-Top">
+        <form action="/salvarVenda" method="POST">
+            <fieldset class="dados-Botton">
                 <div class="title">
-                    <legend>Buscar Entradas</legend>
+                    <legend>Produtos Selecionados</legend>
                 </div>
-                <div class="search-block">
-                    <div class="select">
-                        <label for="codEntrada">Entradas:</label>
-                        <select name="codEntrada" id="codEntrada" required>
-                            <option value="" disable="" hidden="">Selecione uma opção</option> 
-                            {%for entrada in entradas%}
-                                <option value={{entrada.cod_entrada}}>{{entrada.nome_entrada}} - {{entrada.validade_entrada}}</option>
-                            {%endfor%}
-                        </select>
-                    </div>
-                    <button type="submit" class="salvar">
-                        Acessar
-                    </button>
-                </div>
-            </fieldset>
-            <fieldset class="dados-Button">
-                <table id="tabela-entrada">
-                    <tr>
-                        <td class="indent">Nome</td>
-                        <td class="indent">Valor</td>
-                        <td class="indent">Data</td>
+
+                <table class="table-Detalhe">
+                    <tr class="head">
+                        <th>Produto</th>
+                        <th>Quantidade</th>
+                        <th>Valor</th>
+                        <th>Total</th>
                     </tr>
-                    
-                    {%for entrada in entradas%}
+                    {%for item in itensVenda%}
                         <tr>
-                            <td class="valor">{{entrada.nome_entrada}}</td>
-                            <td class="valor">R$ {{entrada.valor_entrada}}</td>
-                            <td class="valor">{{entrada.validade_entrada}}</td>
+                            <td>{{item.nome_hortalica}}</td>
+                            <td>{{item.quantidade_hortalica}} {{item.contagem_hortalica}}</td>
+                            <td>R$ {{item.valor_produto}}</td>
+                            <td>R$ {{item.total_valor}}</td>
                         </tr>
-                    {%endfor%}
-                    
+                    {%endfor%} 
+                    <tr>
+                        <td colspan="3">Sub Total: </td>
+                        <td>{{dadosVenda.valor_venda}}</td>
+                    </tr>
+                </table>
+                <br>
+                <div class="write-block">
+                    <label for="totalVenda">Total Venda:</label>
+                    <input  class="v" type="number" name="totalVenda"  step=".01" min={{dadosVenda.valor_venda}} value={{dadosVenda.valor_venda}} required>
+                </div>
+
+            </fieldset>   
+            <button type="submit" class="btn_calcular" name="btn_calcular">Continuar</button>
+
+        </form> 
+
         
-                </table>  
-            </fieldset>
-        </form>
-
-        <div class="acoes-n-banco">
-            <a  href="/cadastrarEntrada" id="cadastrar-banco"> <p>Cadastrar Entradas</p> </a>
-        </div>
-
     </div>
 </body>
 </html>
