--- a/src/view/Venda/escolherHortalica.html
+++ b/src/view/Venda/escolherHortalica.html
@@ -76,73 +76,40 @@
         </div>   
         
     </div>
-        
+    
     <div class="main">
-        <h1>Entrada de Caixa</h1>
-        <form action="/entrada" method="POST">
+        <h1>
+            Venda </br> {{dadosVenda.tipo_venda}}
+            <a href="/criarVenda">
+                <img src="/imagem/voltar.png" alt="">
+                Voltar
+            </a>
+        </h1>
+
+        <form action="/escolherHortalica" method="POST">
             <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Personalizar Busca</legend>
+                    <legend>Adicionar itens na compra do <strong>{{dadosVenda.nome_cliente}}</strong></legend>
                 </div>
-                <div class="write-block">
-                    <label for="inicioBusca">Inicio da Busca</label>
-                    <input type="date" id="inicioBusca" name="inicioBusca">
+
+                <div class="radio-block">
+                    <label for="entreaga">Selecione as Hortaliças</label>
+
+                    {%for hortalica in listaHortalica%}
+                        <p>
+                            <label onclick="imediato()">
+                                <input type="checkbox" name="hortalica" value={{hortalica.cod_hortalica}}> {{hortalica.nome_hortalica}}
+                            </label>
+                        </p>
+                    {%endfor%}  
+                    
                 </div>
-                <div class="write-block">
-                    <label for="fimBusca">Fim da Busca</label>
-                    <input type="date" id="fimBusca" name="fimBusca">
-                </div>    
-                <button type="submit">
-                   Buscar
-                </button>       
+
+
+                <button type="submit" class="btn_calcular" name="btn_calcular">Selecionar</button>
             </fieldset>
         </form>
-
-        <form action="/acessarEntrada" method="POST">
-            <fieldset class="dados-Top">
-                <div class="title">
-                    <legend>Buscar Entradas</legend>
-                </div>
-                <div class="search-block">
-                    <div class="select">
-                        <label for="codEntrada">Entradas:</label>
-                        <select name="codEntrada" id="codEntrada" required>
-                            <option value="" disable="" hidden="">Selecione uma opção</option> 
-                            {%for entrada in entradas%}
-                                <option value={{entrada.cod_entrada}}>{{entrada.nome_entrada}} - {{entrada.validade_entrada}}</option>
-                            {%endfor%}
-                        </select>
-                    </div>
-                    <button type="submit" class="salvar">
-                        Acessar
-                    </button>
-                </div>
-            </fieldset>
-            <fieldset class="dados-Button">
-                <table id="tabela-entrada">
-                    <tr>
-                        <td class="indent">Nome</td>
-                        <td class="indent">Valor</td>
-                        <td class="indent">Data</td>
-                    </tr>
-                    
-                    {%for entrada in entradas%}
-                        <tr>
-                            <td class="valor">{{entrada.nome_entrada}}</td>
-                            <td class="valor">R$ {{entrada.valor_entrada}}</td>
-                            <td class="valor">{{entrada.validade_entrada}}</td>
-                        </tr>
-                    {%endfor%}
-                    
         
-                </table>  
-            </fieldset>
-        </form>
-
-        <div class="acoes-n-banco">
-            <a  href="/cadastrarEntrada" id="cadastrar-banco"> <p>Cadastrar Entradas</p> </a>
-        </div>
-
     </div>
 </body>
 </html>
