--- a/src/view/Venda/escolherQuantidadeHortalica.html
+++ b/src/view/Venda/escolherQuantidadeHortalica.html
@@ -76,73 +76,66 @@
         </div>   
         
     </div>
-        
+    
     <div class="main">
-        <h1>Entrada de Caixa</h1>
-        <form action="/entrada" method="POST">
+        <h1>
+            Venda </br> {{dadosVenda.tipo_venda}}
+            <a href="/escolherHortalica">
+                <img src="/imagem/voltar.png" alt="">
+                Voltar
+            </a>
+        </h1>
+
+        <form action="/apresentarVenda" method="POST">
             <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Personalizar Busca</legend>
+                    <legend>Adicionar itens na compra do <strong>{{dadosVenda.nome_cliente}}</strong></legend>
                 </div>
-                <div class="write-block">
-                    <label for="inicioBusca">Inicio da Busca</label>
-                    <input type="date" id="inicioBusca" name="inicioBusca">
+
+                <div class="radio-block">
+                    <table class="table-Detalhe" id="tabela-venda">
+                        <tr class="head">
+                            <th></th>
+                            <th>Nome</th>
+                            <th>Quantidade</th>
+                            <th>Preço</th>
+                        </tr>
+                        {%for item in itensVenda%}
+                            <tr>
+                                <td style="width: 1rem;"> <a href={{item.rota_excluir}}><img src="/imagem/lixo.png" alt="apagar"></a> </td>
+                                <td style="width: 2rem;">{{item.nome_hortalica}}</td>                                    
+                                <td style="width: 2rem;" class="input"> <input class="quantProduto" type="number" name="quantProduto"  step=".01"min=".1" placeholder="0.00" required> {{item.contagem_hortalica}}</td>
+                                <td style="width: 10rem;" class="input"> R$<input  class="valorProduto" type="number" name="valorProduto"  step=".01"min=".1" placeholder="0.00" required> POR {{item.contagem_hortalica}}</td>
+                            </tr>
+                        {%endfor%}
+                    </table>
+                    
                 </div>
-                <div class="write-block">
-                    <label for="fimBusca">Fim da Busca</label>
-                    <input type="date" id="fimBusca" name="fimBusca">
-                </div>    
-                <button type="submit">
-                   Buscar
-                </button>       
+
+                <button type="submit" class="btn_calcular" name="btn_calcular">Finalizar</button>
             </fieldset>
         </form>
 
-        <form action="/acessarEntrada" method="POST">
-            <fieldset class="dados-Top">
+        <form>
+            <fieldset class="dados-Botton">
                 <div class="title">
-                    <legend>Buscar Entradas</legend>
+                    <legend>Lista da Compras</legend>
                 </div>
-                <div class="search-block">
-                    <div class="select">
-                        <label for="codEntrada">Entradas:</label>
-                        <select name="codEntrada" id="codEntrada" required>
-                            <option value="" disable="" hidden="">Selecione uma opção</option> 
-                            {%for entrada in entradas%}
-                                <option value={{entrada.cod_entrada}}>{{entrada.nome_entrada}} - {{entrada.validade_entrada}}</option>
-                            {%endfor%}
-                        </select>
-                    </div>
-                    <button type="submit" class="salvar">
-                        Acessar
-                    </button>
-                </div>
-            </fieldset>
-            <fieldset class="dados-Button">
-                <table id="tabela-entrada">
-                    <tr>
-                        <td class="indent">Nome</td>
-                        <td class="indent">Valor</td>
-                        <td class="indent">Data</td>
+
+                <table class="table-Detalhe">
+                    <tr class="head">
+                        <th>Plano Produção</th>
+                        <th>Produto</th>
                     </tr>
-                    
-                    {%for entrada in entradas%}
+                    {%for item in listaCompra%}
                         <tr>
-                            <td class="valor">{{entrada.nome_entrada}}</td>
-                            <td class="valor">R$ {{entrada.valor_entrada}}</td>
-                            <td class="valor">{{entrada.validade_entrada}}</td>
+                            <td>{{item.nome_plano}}</td>
+                            <td>{{item.nome_item}}</td>
                         </tr>
                     {%endfor%}
-                    
+                </table>
+        </form> 
         
-                </table>  
-            </fieldset>
-        </form>
-
-        <div class="acoes-n-banco">
-            <a  href="/cadastrarEntrada" id="cadastrar-banco"> <p>Cadastrar Entradas</p> </a>
-        </div>
-
     </div>
 </body>
 </html>
